--- a/JSCeramics/index.html
+++ b/JSCeramics/index.html
@@ -23,35 +23,73 @@
         </ul>
       </nav>
     </header>
+    <section class="cards-container">
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
+        />
+        <h2>Joshua Vase</h2>
+      </div>
 
-    <img
-      src="https://images.unsplash.com/photo-1565193566173-7a0ee3dbe261?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
-    />
-    <h2>Joshua Vase</h2>
-    <img
-      src="https://images.unsplash.com/photo-1578749556568-bc2c40e68b61?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
-    />
-    <h2>Larkin Plates</h2>
-    <img src=
-    https://images.unsplash.com/photo-1610701596007-11502861dcfa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80">
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1578749556568-bc2c40e68b61?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
+        />
+        <h2>Larkin Plates</h2>
+      </div>
 
-    <img
-      src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2615&q=80"
-    />
+      <div class="card">
+        <img src=
+        https://images.unsplash.com/photo-1610701596007-11502861dcfa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80">
+        <h2>Fortesa Cloud No 2</h2>
+      </div>
 
-    <img
-      src="https://images.unsplash.com/photo-1525974160448-038dacadcc71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2274&q=80"
-    />
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1576020799627-aeac74d58064?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2615&q=80"
+        />
+        <h2>Astoria Collection</h2>
+      </div>
 
-    <img
-      src="https://images.unsplash.com/photo-1610701596061-2ecf227e85b2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
-    />
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1525974160448-038dacadcc71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2274&q=80"
+        />
+        <h2>Lava Beach Stone Wear</h2>
+      </div>
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1610701596061-2ecf227e85b2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
+        />
+        <h2>Sand Canyon Bowls</h2>
+      </div>
 
-    <img
-      src="https://images.unsplash.com/photo-1490312278390-ab64016e0aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
-    />
-    <img
-      src="https://images.unsplash.com/photo-1605883705077-8d3d3cebe78c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=cro>p&w=2670&q=80"
-    />
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1490312278390-ab64016e0aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80"
+        />
+        <h2>Lennon Collection</h2>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://images.unsplash.com/photo-1605883705077-8d3d3cebe78c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=cro>p&w=2670&q=80"
+        />
+        <h2>Mendecino Dinner Wear</h2>
+      </div>
+    </section>
+    <section class="about">
+      <h3>
+        Designing, making, and selling goods of timeless design and
+        uncompromising integrity—made thoughtfully, honestly, and with pride—to
+        be enjoyed with similar intention.
+      </h3>
+
+      <h3>Let's work together.</h3>
+      <div class="contact">
+        <p>Joseph@ceramic.com</p>
+        <p>930-222-1111</p>
+      </div>
+    </section>
   </body>
 </html>
