added the cv example using floats

--- a/CVProject/index.html
+++ b/CVProject/index.html
@@ -53,5 +53,67 @@
         </div>
       </div>
     </section>
+    <section class="blog-section">
+      <div class="blog-content">
+        <div class="two-col-section">
+          <p>Tech Blog</p>
+          <div class="blog-posts">
+            <p class="blog-heading">This is your brain on helium</p>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              perspiciatis magnam rerum, vero perferendis, placeat deleniti quos
+              cumque vitae fugiat harum excepturi at natus! Repellendus
+              reiciendis sequi excepturi enim facilis!
+            </p>
+            <p class="blog-date">May 19, 2025</p>
+
+            <p class="blog-heading">In search of intelligence</p>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              perspiciatis magnam rerum, vero perferendis, placeat deleniti quos
+              cumque vitae fugiat harum excepturi at natus! Repellendus
+              reiciendis sequi excepturi enim facilis!
+            </p>
+            <p class="blog-date">June 17, 2025</p>
+
+            <p class="blog-heading">Should public transit be free</p>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              perspiciatis magnam rerum, vero perferendis, placeat deleniti quos
+              cumque vitae fugiat harum excepturi at natus! Repellendus
+              reiciendis sequi excepturi enim facilis!
+            </p>
+            <p class="blog-date">July 19, 2025</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="events-section">
+      <div class="events-content">
+        <div class="two-col-section">
+          <p>Speaking Events</p>
+          <div class="events-card">
+            <p class="event-title">NY Economics Forum</p>
+            <p class="event-location">New York,NY</p>
+            <p class="event-date">August 25th 2025, 7:00pm</p>
+
+            <p class="event-title">Emerging Tech Meet-Up</p>
+            <p class="event-location">San Francisco, CA</p>
+            <p class="event-date">July 19th 2025, 2:00pm</p>
+
+            <p class="event-title">Creative Code Meetup</p>
+            <p class="event-location">Denver, CO</p>
+            <p class="event-date">September 29th 2025, 6:00pm</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-content">
+        <img src="images/instagram.png" alt="" />
+        <img src="images/twitter.png" alt="" />
+        <p>MadeWith ❤️</p>
+      </div>
+    </footer>
   </body>
 </html>
